--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,36 +1,33 @@
-<h1>Cats!</h1>
+<h1>Our Cool restaurant!</h1>
 
-<h2>Menu</h2>
+<h2>Suggestions for you:</h2>
 
-<ul>
+<ul id="suggestions">
     {{#each menu}}
-    <li>{{name}}</li>
-
+    {{#unless devoured}}
+    {{> menu/menu-devour devoured=false}}
+    {{/unless}}
     {{/each}}
 </ul>
 
-<h2>Devoured</h2>
+<h2>Ordered:</h2>
 
 <ul>
     {{#each menu}}
-    <li>{{devoured}}</li>
+    {{#if devoured}}
+    {{> menu/menu-delete devoured=true}}
+    {{/if}}
     {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
+<h2>What you would like to add?</h2>
 
 <form class="create-form">
 
     <div class="form-group">
-        <label for="ca">Cat Name:</label>
+        <label for="ca">Add here:</label>
         <input type="text" id="ca" name="name">
     </div>
 
-    <div class="form-group">
-        <label for="sleepy">Sleepy?</label><br>
-        <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-        <input type="radio" name="sleepy" value="0"> Awake
-    </div>
-
-    <button type="submit">Add Cat</button>
+    <button type="submit">Add item</button>
 </form>
