--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,15 +4,22 @@
 
 <head>
     <meta charset="UTF-8">
-
+    <title>Burger-Diner</title>
+    <link rel="stylesheet" href="/assets/css/reset.css" type="text/css" />
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Calligraffitti'>
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Almarai'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-    <title>Burger</title>
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/assets/js/burger.js"></script>
+
 </head>
 
 <body>
+
     {{{ body }}}
+
 </body>
 
 </html>
