--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,72 @@
-<h1>Our Cool restaurant!</h1>
+<div class="row header" id="header">
 
-<h2>Suggestions for you:</h2>
+    <div class="col-2" id="side-left"></div>
 
-<ul id="suggestions">
-    {{#each menu}}
-    {{#unless devoured}}
-    {{> menu/menu-devour devoured=false}}
-    {{/unless}}
-    {{/each}}
-</ul>
+    <div class="col-8" id="header-logo">
 
-<h2>Ordered:</h2>
+        <div id="div1"></div>
 
-<ul>
-    {{#each menu}}
-    {{#if devoured}}
-    {{> menu/menu-delete devoured=true}}
-    {{/if}}
-    {{/each}}
-</ul>
+        <div id="img-logo">
+            <div id="logo-text">Burger Diner</div>
+        </div>
 
-<h2>What you would like to add?</h2>
 
-<form class="create-form">
+        <div class="row" id="order-here">
 
-    <div class="form-group">
-        <label for="ca">Add here:</label>
-        <input type="text" id="ca" name="name">
+            <div class="col-12" id="order">
+
+                <h1>What you would like to eat?</h2>
+
+                    <form class="create-form">
+
+                        <div class="form-group">
+
+                            <input type="text" id="ca" name="name" required>
+                            <button type="submit" class="btn btn-outline-dark">Add to Menu
+
+                            </button>
+                        </div>
+
+                    </form>
+            </div>
+        </div>
+
+
+        <div class="row" id="menu">
+
+            <div class="col-6" id="suggestions">
+
+                <h2>Our Menu:</h2>
+
+                <ul>
+                    {{#each menu}}
+                    {{#unless devoured}}
+                    {{> menu/menu-devour devoured=false}}
+                    {{/unless}}
+                    {{/each}}
+                </ul>
+
+            </div>
+
+
+            <div class="col-6" id="ordered">
+
+                <h2>Order Food:</h2>
+
+                <ul>
+                    {{#each menu}}
+                    {{#if devoured}}
+                    {{> menu/menu-delete devoured=true}}
+                    {{/if}}
+                    {{/each}}
+                </ul>
+
+            </div>
+
+        </div>
+
     </div>
 
-    <button type="submit">Add item</button>
-</form>
+    <div class="col-2" id="side-right"></div>
+
+</div>
