--- a/views/partials/menu/menu-delete.handlebars
+++ b/views/partials/menu/menu-delete.handlebars
@@ -1,8 +1,8 @@
 <li>
 	{{name}}
 
-	<button class="delete-item" data-id="{{id}}" data-devoured="{{devoured}}">
-		Delete
+	<button class="icon-btn add-btn delete-item btn btn-outline-dark" data-id="{{id}}" data-devoured="{{devoured}}">
+		<div class="btn-txt">Order Now!</div>
 	</button>
 
 
