--- a/views/partials/menu/menu-devour.handlebars
+++ b/views/partials/menu/menu-devour.handlebars
@@ -1,8 +1,10 @@
 <li>
 	{{name}}
 
-	<button class="change-devour" data-id="{{id}}" data-devoured="{{devoured}}">
-		Devour
+
+	<button class="icon-btn add-btn change-devour btn btn-outline-dark" data-id="{{id}}" data-devoured="{{devoured}}">
+		<div class=" add-icon"></div>
+		<div class="btn-txt">Add to Order</div>
 	</button>
 
 </li>
