--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 #img-logo{
-    background-image: url("../img/logo3.jpg");
+    background-image: url("../img/logo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 80px;
